--- a/ENTRYPOINT/dockerfile
+++ b/ENTRYPOINT/dockerfile
@@ -1,3 +1,4 @@
 FROM almalinux
 #CMD ["ping","-c5","google.com"]
-ENTRYPOINT ["ping","-c5","google.com"]
+CMD ["goggle.com"]
+ENTRYPOINT ["ping","-c5"]
